5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4136/executions/1575_2896.log
== TEST (2019-03-12 21:51:31) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(vinte e tres)

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(vinte e tres)
                      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:51:44) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(tres)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(tres)
NameError: name 'tres' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:52:22) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(vartres)

# Impressao de saidas
print(var)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    var = input(vartres)
NameError: name 'vartres' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 21:52:30) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input(var tres)

# Impressao de saidas
print(var)
-- ERROR:
File "XXXX", line 4
    var = input(var tres)
                       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-13 16:25:18) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var tres")

# Impressao de saidas
print(var)
-- OUTPUT:
Ada_Lovelace
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 16:25:20) 
-- CODE:
# Use este codigo como ponto de partida

# Leitura de valores de entrada
var = input("var tres")

# Impressao de saidas
print(var)
-- EXECUTION TIME:
0.163415
-- TEST CASE 1:
---- input:
Ada_Lovelace
---- correct output:
Ada_Lovelace
---- user output:
Ada_Lovelace
-- TEST CASE 2:
---- input:
Teste
---- correct output:
Teste
---- user output:
Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
